# ai_tutor

./: .gitignore  chains.py  create_database.py  main.ipynb  pyproject.toml  readme.md  utils.py
data/python_docs/: contents.txt
data/python_docs/c-api/: code.txt  index.txt  utilities.txt
data/python_docs/faq/: programming.txt
data/python_docs/howto/: descriptor.txt  functional.txt  index.txt  pyporting.txt
data/python_docs/reference/: datamodel.txt  grammar.txt
data/python_docs/using/: windows.txt
data/python_docs/whatsnew/: 2.0.txt  2.2.txt  3.1.txt  3.2.txt  changelog.txt
