[tool.poetry]
name = "ai-tutor"
version = "0.1.0"
description = ""
authors = ["qihangL <liangqihang1@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
langchain = "^0.1.7"
langchain-openai = "^0.0.6"
ipykernel = "^6.29.2"
ipywidgets = "^8.1.2"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
inflect = "^7.0.0"
chromadb = "^0.4.22"
unstructured = "^0.12.4"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
